<resources>
    <string name="app_name">Web Caster</string>
    <string name="agreement_content">Web Caster is an application that provides functions of remote control and screen projection. In order to provide the above functions, this application needs to be connected to the Internet, turn on/off WLAN, and turn on/off the local network permission to perform screen projection operations. Umeng SDK is used to collect device Mac address, unique device identification code (IMEI/Android ID/OPENUDID/GUID), Android advertising identifier, SIM card IMSI information AdMob SDK is used to obtain unique identifier, device type and settings, operating system , mobile network information (including carrier name and phone number), and app version number, IP address, crash reports.</string>
    <string name="Remote">Remote</string>
    <string name="Browser">Browser</string>
    <string name="Please_enter_content">Please enter content</string>
    <string name="Select_device">Select device</string>
    <string name="Keyboard">Keyboard</string>
    <string name="Channels">Channels</string>
    <string name="Streaming">Streaming</string>
    <string name="Search_or_enter_a_URL">Search or enter a URL</string>
    <string name="ip">ip:</string>
    <string name="streaming_stick_4k">Streaming Stick 4K</string>
    <string name="living_room">living room</string>
    <string name="video_name">video_name</string>
    <string name="office">Office</string>
    <string name="www_baidu_com">www.baidu.com</string>
    <string name="baidu">百度</string>
    <string name="Video_List">Video List</string>
    <string name="x_videos_in_total">%1$d videos in total</string>
    <string name="Automatically_search_the_device...">Automatically search the device...</string>
    <string name="make_sure_the_android_device_is_on_the_same_wi_fi_as_roku">Make sure the Android device is on the same Wi-Fi as Roku</string>
    <string name="add_connected_device">Add connected device</string>
    <string name="Redetect">Redetect</string>
    <string name="Settings">Settings</string>
    <string name="No_Roku_detected">No Roku detected</string>
    <string name="Please_check_the_Android_device_is_on_the_same_WiFi_as_Roku">Please check the Android device is on the same Wi-Fi as Roku</string>
    <string name="Please_allow_network_permissions_and_connect_to_WiFi">Please allow network permissions and connect to Wi-Fi</string>
    <string name="otherwise_you_will_not_be_able_to_connect_to_Roku_devices">otherwise you will not be able to connect to Roku devices</string>
    <string name="Deselect">Deselect</string>
    <string name="Select_all">Select all</string>
    <string name="Cancel">Cancel</string>
    <string name="Device_Management">Device Management</string>
    <string name="Edit">Edit</string>
    <string name="common_equipment">Common Equipment</string>
    <string name="no_device_please_add_device">No device, please add device</string>
    <string name="delete">Delete</string>
    <string name="enable_closed_captions">Enable closed captions</string>
    <string name="_1_turn_on_your_roku_device_and_go_to_settings">1. Turn on your Roku device and go to Settings;</string>
    <string name="_2_find_accessibility">2. Find “Accessibility”；</string>
    <string name="recommended_url">Recommended URL</string>
    <string name="youtube">Youtube</string>
    <string name="bilibili">BiliBili</string>
    <string name="espn">ESPN</string>
    <string name="history">History</string>
    <string name="Search_history">Search history</string>
    <string name="no_search_content">No search content</string>
    <string name="Select_Mail_Client">Select Mail Client</string>
    <string name="setting">Setting</string>
    <string name="accessibility">Accessibility</string>
    <string name="button_vibration">Button Vibration</string>
    <string name="about_us">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="give_a_comment">Give a comment</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_agreements">User Agreements</string>
    <string name="casting_successful">Casting successful</string>
    <string name="the_channel_has_not_been_installed_please_install_it_before_use">The channel has not been installed, please install it before use</string>
    <string name="not_to_use">Not to use</string>
    <string name="agree">Agree</string>
    <string name="refreshing_please_wait">Refreshing, please wait</string>
    <string name="_3_select_captions_mode_and_check_on_always_to_enable_device_subtitles">3. Select Captions modeand check On alwaysto enable device subtitles</string>
    <string name="connecting_please_wait">Connecting, please wait</string>
    <string name="are_you_sure_you_want_to_remove_device">Are you sure you want to remove device?</string>
    <string name="remove">Remove</string>
    <string name="install">Install</string>
    <string name="you_can_read_the_user_agreement_and_privacy_policy_for_relevant_information_if_you_agree_click_agree_to_start_using_our_app"><![CDATA[You can read the <a href="%1$s"><font color="#FF0BBD6A">User Agreement</font></a> and <a href="%2$s"><font color="#FF0BBD6A">Privacy Policy</font></a> for relevant information. If you Agree, click Agreeto start using our app.]]></string>
    <string name="found_the_screencast_content_click_to_cast_the_screen">Found the screencast content, click to cast the screen</string>
    <string name="got_it">Got it!</string>
    <string name="add_device">Add Device</string>
    <string name="give_us_a_good_review">Give us a good review</string>
    <string name="if_you_think_the_app_is_easy_to_use_please_give_us_a_good_review_we_will_do_better_and_better">If you think the App is easy to use, please give us a good review, we will do better and better!</string>
    <string name="give_5_star_rating">Give 5 star rating</string>
    <string name="later">Later</string>
</resources>
