<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_dialog_comment">
    <ImageView
        android:id="@+id/iv_comment_bg"
        android:layout_width="201dp"
        android:layout_height="201dp"
        android:src="@mipmap/comment_insert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        />
    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="280dp"
        android:layout_height="295dp"
        android:layout_marginTop="203dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/tv_title1"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:text="@string/give_us_a_good_review"
        android:textColor="#FF333333"
        android:textSize="18sp"
        android:layout_below="@id/iv_comment_bg"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/tv_title2"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:text="@string/if_you_think_the_app_is_easy_to_use_please_give_us_a_good_review_we_will_do_better_and_better"
        android:textColor="#FF666666"
        android:textSize="14sp"
        android:layout_below="@id/tv_title1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="4dp"
        />
    <Button
        android:id="@+id/btn_comment_send"
        android:layout_width="232dp"
        android:layout_height="44dp"
        android:text="@string/give_5_star_rating"
        android:textColor="#FFFFFFFF"
        android:layout_below="@id/tv_title2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_comment_button"/>
    <TextView
        android:id="@+id/tv_did_not_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/later"
        android:textColor="#FFCCCCCC"
        android:textSize="14sp"
        android:layout_below="@id/btn_comment_send"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        />
</RelativeLayout>