<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/app_name"
        android:textColor="#DE202020"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        />

    <ScrollView
        android:id="@+id/iv_content"
        android:layout_below="@id/tv_title"
        android:layout_alignStart="@id/tv_title"
        android:layout_width="232dp"
        android:layout_height="225dp"
        android:layout_marginTop="4dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreement_content"/>
    </ScrollView>
    <View
        android:layout_width="280dp"
        android:layout_height="49dp"
        android:background="@drawable/overlay"
        android:layout_marginTop="225dp"
        />
    <TextView
        android:id="@+id/tv_bottom1"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:text='@string/you_can_read_the_user_agreement_and_privacy_policy_for_relevant_information_if_you_agree_click_agree_to_start_using_our_app'
        android:layout_below="@id/iv_content"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_below="@id/tv_bottom1"
        android:id="@+id/tv_cancelUse"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/not_to_use"
        android:textColor="#FF7B7981"
        android:textSize="14sp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="13dp"
        />
    <TextView
        android:layout_below="@id/tv_bottom1"
        android:layout_alignTop="@id/tv_cancelUse"
        android:layout_alignParentEnd="true"
        android:id="@+id/tv_accept"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/agree"
        android:textColor="#FF0BBD6A"
        android:textSize="14sp"
        android:layout_marginEnd="30dp"
        />
</RelativeLayout>