<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InternetHistoryList">

    <RelativeLayout
        android:id="@+id/rl_topTab"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/iv_back_internetHistory"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:src="@mipmap/back_device_management" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_centerInParent="true"
            android:text="@string/history"
            android:textColor="#FF202020"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_search_internetHistory"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/rl_topTab"
        android:layout_marginTop="10dp">

        <SearchView
            android:id="@+id/sv_search_historyList"
            style="@style/CustomSearchViewStyle"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:background="@drawable/shape_internet_history_search"
            android:iconifiedByDefault="false"
            android:queryHint="Search history"
            android:textColorHint="#FF999999" />
        <TextView
            android:id="@+id/tv_cancel_historyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:textColor="#000000"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_historyList_internetHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_search_internetHistory"
        android:layout_marginTop="10dp"/>
    <ImageView
        android:id="@+id/iv_content_is_empty_bg"
        android:layout_width="307dp"
        android:layout_height="164dp"
        android:src="@mipmap/content_is_empty"
        android:layout_below="@id/rl_search_internetHistory"
        android:layout_marginTop="54dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/tv_content_is_empty_title"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/no_search_content"
        android:textColor="#FF202020"
        android:textSize="14sp"
        android:layout_below="@id/iv_content_is_empty_bg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:visibility="gone"
        />
</RelativeLayout>